# panops

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  _typos.toml  deny.toml  lefthook.yml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  tech-debt.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  dependabot-auto-merge.yml  multi-model-review.yml  qwen-review.yml
.github/workflows/scripts/: redact-review.py  test-redact-review.sh
crates/panops-core/: Cargo.toml
crates/panops-core/src/: asr.rs  diar.rs  exporter.rs  lib.rs  llm.rs  merge.rs  segment.rs  wer.rs
crates/panops-core/src/conformance/: asr.rs  diar.rs  exporter.rs  fakes.rs  llm.rs  mod.rs
crates/panops-core/src/notes/: dialect.rs  error.rs  input.rs  ir.rs  mod.rs  pipeline.rs  prompts.rs  screenshot_anchoring.rs  topic_segmentation.rs  verifier.rs
crates/panops-core/tests/: conformance_fake.rs  conformance_fake_diar.rs  conformance_fake_exporter.rs  conformance_fake_llm.rs  notes_pipeline.rs
crates/panops-engine/: Cargo.toml  build.rs
crates/panops-engine/src/: lib.rs  main.rs
crates/panops-engine/src/server/: events.rs  handlers.rs  mod.rs  socket.rs
crates/panops-engine/tests/: cli_default.rs  cli_logging.rs  cli_notes.rs  dylib_smoke.rs  ipc_job_error_carries_kind.rs  ipc_meeting_list_returns_empty.rs  ipc_method_not_found_carries_jsonrpc_error.rs  ipc_notes_generate_round_trip.rs  ipc_refuses_to_steal_live_socket.rs  ipc_server_starts_and_binds.rs  ipc_socket_perms_are_0600.rs  ipc_stale_socket_is_cleaned.rs  smoke.rs
crates/panops-engine/tests/common/: mod.rs
crates/panops-portable/: Cargo.toml
crates/panops-portable/src/: genai_llm.rs  lib.rs  markdown_exporter.rs  model.rs  sherpa_diarizer.rs  whisper_adapter.rs
crates/panops-portable/tests/: conformance_diar.rs  conformance_genai_llm.rs  conformance_markdown_exporter.rs  conformance_notes_generator.rs  conformance_real.rs
crates/panops-protocol/: Cargo.toml
crates/panops-protocol/src/: error.rs  lib.rs  methods.rs
docs/: north-star.md
docs/proto/: ipc.md
docs/research/: 2026-04-30-market-scan.md
docs/superpowers/specs/: 2026-04-30-panops-design.md  2026-04-30-slice-02-headless-cli-design.md  2026-05-01-slice-03-postpass-diarization-design.md  2026-05-01-slice-04-notes-generation-design.md  2026-05-02-slice-05-ipc-brainstorm.md  2026-05-02-slice-05-ipc-design.md
scripts/: extract-conversations.py  review-pr.sh
tests/fixtures/: README.md
tests/fixtures/audio/: en_30s.transcript.txt  es_30s.transcript.txt  mixed_60s.transcript.txt  multi_speaker_60s.transcript.txt  multi_speaker_60s.turns.json
tests/fixtures/notes/: multi_speaker_60s.expected.basic.md  multi_speaker_60s.expected.json  multi_speaker_60s.expected.notion.md
tests/fixtures/scripts/: generate.sh
