[workspace]
resolver = "2"
members = ["crates/panops-core", "crates/panops-portable", "crates/panops-engine"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Fran Matzkin"]
repository = "https://github.com/vfmatzkin/panops"
rust-version = "1.85"

[profile.release]
lto = "thin"
codegen-units = 1
