[package]
name = "panops-core"
description = "Domain types and ports for panops. Zero platform code."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
hound = "3.5"

[dev-dependencies]
serde_json = "1"
