[package]
name = "panops-core"
description = "Domain types and ports for panops. Zero platform code."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
hound = "3.5"
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
rayon = "1.10"
