[package]
name = "panops-engine"
description = "panops engine binary. Dev/CI tool. See Panops.app for the actual product."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "panops-engine"
path = "src/main.rs"

[dependencies]
panops-core = { path = "../panops-core" }
panops-portable = { path = "../panops-portable" }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
