[package]
name = "panops-engine"
description = "panops engine binary. Dev/CI tool. See Panops.app for the actual product."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "panops-engine"
path = "src/main.rs"

[dependencies]
panops-core = { path = "../panops-core" }
panops-portable = { path = "../panops-portable" }
panops-protocol = { path = "../panops-protocol", features = ["domain-conversions"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "sync", "time"] }
# `ws-client` is test-only; see [dev-dependencies] for the additive feature.
jsonrpsee = { version = "0.26", features = ["server", "macros"] }
futures-util = "0.3"
async-trait = "0.1"
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
# Cargo merges features additively across `dependencies` + `dev-dependencies`,
# so this enables `ws-client` for `cargo test` without leaking it into the
# production binary.
jsonrpsee = { version = "0.26", features = ["ws-client"] }
