[package]
name = "panops-portable"
description = "Portable AsrProvider + Diarizer adapters."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
panops-core = { path = "../panops-core" }
whisper-rs = "0.16"
sherpa-rs = "0.6"
hound = "3.5"
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
tar = "0.4"
bzip2 = "0.6"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

genai = "=0.5.3"
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
