[package]
name = "panops-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

description = "Wire types for panops IPC (JSON-RPC 2.0 + WebSocket events). Transport-only; no engine logic."

[features]
default = []
domain-conversions = ["dep:panops-core"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
panops-core = { path = "../panops-core", optional = true }
